Finished file saving Major improvements Better UI

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "name": "symbolic_picture_analyzer",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
         },
         {
             "name": "symbolic_picture_analyzer (profile mode)",
