--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,6 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  file_picker:
   flutter:
     sdk: flutter
 
@@ -36,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+  get: ^4.6.5
+  flutter_colorpicker: ^1.0.3
+  flutter_beautiful_popup: ^1.7.0
+  file_picker:
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +56,12 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
+  plugin:
+    platforms:
+      web:
+        pluginClass: UrlLauncherPlugin
+        fileName: web/url_launcher_web.dart
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
