--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -11,6 +11,8 @@ jobs:
    runs-on: windows-latest
    steps:
      - uses: actions/checkout@v3
+       with:
+         submodules: recursive
      - uses: subosito/flutter-action@v2
        with:
          channel: 'beta'
