--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Flutter action
+name: Build windows binary
 on: workflow_dispatch
 
 jobs:
@@ -18,6 +18,10 @@ jobs:
          channel: 'beta'
      - run: flutter config --enable-windows-desktop
      - run: flutter build windows
+     - uses: actions/upload-artifact@v3.1.0
+       with:
+         path: build/windows
+     
       
       
       
