--- a/.github/workflows/upload_artifact_to_page.yml
+++ b/.github/workflows/upload_artifact_to_page.yml
@@ -38,6 +38,7 @@ jobs:
            name: 'web-binary'
   # Single deploy job since we're just deploying
   deploy:
+    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
