--- a/.github/workflows/upload_artifact_to_page.yml
+++ b/.github/workflows/upload_artifact_to_page.yml
@@ -35,7 +35,6 @@ jobs:
        - uses: actions/upload-artifact@v3.1.0
          with:
            path: build/web
-           name: 'web-binary'
   # Single deploy job since we're just deploying
   deploy:
     needs: build
@@ -48,16 +47,16 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v2
-      - name: Download latest build
-        uses: actions/download-artifact@v3.0.0
-        with:
-          name: 'web-binary'
-          path: '/www/'
+     # - name: Download latest build
+     #   uses: actions/download-artifact@v3.0.0
+     #   with:
+     #     path: '~/www/'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: '/www/'
+          #path: '~/www/'
+          path: build/web
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
