--- a/.github/workflows/upload_artifact_to_page.yml
+++ b/.github/workflows/upload_artifact_to_page.yml
@@ -47,16 +47,15 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v2
-     # - name: Download latest build
-     #   uses: actions/download-artifact@v3.0.0
-     #   with:
-     #     path: '~/www/'
+      - name: Download latest build
+        uses: actions/download-artifact@v3.0.0
+        with:
+          path: '~/www/'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          #path: '~/www/'
-          path: build/web
+          path: '~/www/'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
