--- a/.github/workflows/upload_artifact_to_page.yml
+++ b/.github/workflows/upload_artifact_to_page.yml
@@ -51,6 +51,7 @@ jobs:
         uses: actions/download-artifact@v3.0.0
         with:
           path: '~/www/' # ~/www/artifact
+      - run: 'ls -r ~'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
